--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello courseera!</title>
+	<title>Hello Rutva!</title>
 </head>
 <body>
-<h1>zzzz gh hj hello courseers!</h1>
+<h1>zzzz Kam karne website jove gh hj hello courseers!</h1>
 </body>
 </html>
